--- a/DiabetesApp/app/src/main/res/layout/activity_manual.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_manual.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="204dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Enter"
+        android:text=""
         android:textSize="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
