--- a/DiabetesApp/app/src/main/res/layout/activity_input__password.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_input__password.xml
@@ -9,25 +9,12 @@
 
     <com.andrognito.patternlockview.PatternLockView
         android:id="@+id/pattern_lock_view"
-        android:layout_width="280dp"
-        android:layout_height="280dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="148dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/enter"
-        android:layout_width="120dp"
-        android:layout_height="71dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
-        android:layout_marginBottom="24dp"
-        android:background="@color/colorPrimary"
-        android:text="Enter"
-        android:textSize="25dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:background="#000000AA"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
