--- a/Doctor_App/app/src/main/res/layout/activity_login.xml
+++ b/Doctor_App/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,20 @@
     android:background="#C8E6C9"
     tools:context="com.example.doctor_app.Login">
 
+    <ProgressBar
+        android:id="@+id/indeterminateBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="8dp"
+        android:indeterminate="true"
+        android:indeterminateTint="@android:color/black"
+        android:padding="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHorizontal"
         android:layout_width="wrap_content"
