--- a/DiabetesApp/app/src/main/res/layout/activity_camera.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_camera.xml
@@ -7,13 +7,40 @@
     android:background="#C8E6C9"
     tools:context=".Camera">
 
-    <SurfaceView
-        android:id="@+id/surface_view"
-        android:layout_width="359dp"
-        android:layout_height="517dp"
-        android:layout_marginTop="76dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <SurfaceView
+            android:id="@+id/surface_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/myLineView"
+            android:layout_width="200dp"
+            android:layout_height="3dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/rect"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/myRectangleView"
+            android:layout_width="200dp"
+            android:layout_height="210dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/rect"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/text_view"
@@ -33,22 +60,11 @@
         android:id="@+id/done"
         android:layout_width="105dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="564dp"
         android:text="Done"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <View
-        android:id="@+id/myRectangleView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="200dp"
-        android:background="@drawable/rect"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/back"
