--- a/DiabetesApp/app/src/main/res/layout/activity_data__enter.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_data__enter.xml
@@ -36,7 +36,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/blood_sugar"
                 android:layout_width="80dp"
                 android:layout_height="100dp"
                 android:layout_marginStart="10dp"
@@ -47,110 +47,24 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/blood_drop" />
 
-            <TextView
-                android:id="@+id/sugar"
-                android:layout_width="201dp"
-                android:layout_height="54dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="30dp"
-                android:text=""
-                android:background="@color/white"
-                android:textSize="30dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
             <ImageView
-                android:id="@+id/camera"
-                android:layout_width="120dp"
+                android:id="@+id/blood_pressure"
+                android:layout_width="80dp"
                 android:layout_height="100dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:scaleType="fitXY"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/camera_icon" />
-
-            <ImageView
-                android:id="@+id/numbers"
-                android:layout_width="120dp"
-                android:layout_height="100dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:scaleType="fitXY"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/numbers_icon" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="80dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="30dp"
-        android:scaleType="fitXY"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/blood_pressure_icon" />
-
-            <TextView
-                android:id="@+id/pressure"
-                android:layout_width="201dp"
-                android:layout_height="54dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
-                android:text=""
-                android:background="@color/white"
-                android:textSize="30dp"
+                android:scaleType="fitXY"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/blood_pressure_icon" />
+
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-    <ImageView
-        android:id="@+id/camera2"
-        android:layout_width="120dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:scaleType="fitXY"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/camera_icon" />
-
-    <ImageView
-        android:id="@+id/numbers2"
-        android:layout_width="120dp"
-        android:layout_height="100dp"
-        android:scaleType="fitXY"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/numbers_icon" />
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/cm"
@@ -164,18 +78,6 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/cm" />
 
-            <EditText
-                android:id="@+id/addHeight"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:textSize="30dp"
-                android:inputType="textPersonName"
-                android:text="" />
-
             <ImageView
                 android:id="@+id/kg"
                 android:layout_width="100dp"
@@ -188,37 +90,9 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/kg" />
 
-            <EditText
-                android:id="@+id/addWeight"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:textSize="30dp"
-                android:inputType="textPersonName"
-                android:text="" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
         </LinearLayout>
 
-            <ImageView
-                android:id="@+id/enter"
-                android:layout_width="99dp"
-                android:layout_height="75dp"
-                android:layout_marginStart="220dp"
-                android:layout_marginLeft="220dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
-                android:background="@drawable/baseline_done_black_48dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+
 
         </LinearLayout>
     </ScrollView>
