--- a/DiabetesApp/app/src/main/res/layout/activity_input__password.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_input__password.xml
@@ -11,7 +11,7 @@
         android:id="@+id/pattern_lock_view"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:background="#000000AA"
+        android:background="#76c179"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
