--- a/backend/src/public/style.css
+++ b/backend/src/public/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 h1 {
-  margin: 0;
+  margin: 10px 0;
   font-size: 21px;
 }
 
@@ -66,7 +66,7 @@ h1 {
   height: 40px;
   background-color: #1484c8;
   color: #ffffff;
-  border-radius: 5px;
+  border-radius: 4px;
   font-size: 16px;
 }
 
@@ -78,10 +78,11 @@ h1 {
   line-height: 40px;
   background-color: #1484c8;
   color: #ffffff;
-  border-radius: 5px;
+  border-radius: 4px;
   font-size: 16px;
   margin: 5px 0;
-  text-align: center;
+  padding: 0 10px;
+  text-align: left;
   color: #ffffff;
   font-weight: 900;
 }
@@ -97,7 +98,7 @@ a:visited {
   padding: 0 10px;
   height: 30px;
   background-color: #e6e6e6;
-  border-radius: 5px;
+  border-radius: 4px;
   font-size: 14px;
 }
 
