Add menu and sign out menu item to doc app

--- a/Doctor_App/app/src/main/res/layout/activity_dashboard.xml
+++ b/Doctor_App/app/src/main/res/layout/activity_dashboard.xml
@@ -8,6 +8,19 @@
     android:background="@android:color/background_light"
     tools:context="com.example.doctor_app.Dashboard">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#C8E6C9"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.00" />
+
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/addPatient"
         android:layout_width="wrap_content"
@@ -33,13 +46,16 @@
         android:id="@+id/listViewPatients"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:divider="@null"
         android:footerDividersEnabled="false"
         android:headerDividersEnabled="false"
+        android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
     </ListView>
 
